After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 687459 - textoverlay:forward allocation queries instead of discarding
textoverlay:forward allocation queries instead of discarding
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.0.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
: 688415 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2012-11-02 15:52 UTC by sreerenj
Modified: 2012-11-15 17:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
textoverlay:forward allocation queries instead of discarding (1.31 KB, patch)
2012-11-02 15:52 UTC, sreerenj
reviewed Details | Review
textoverlay:forward allocation queries instead of discarding. (1.03 KB, patch)
2012-11-05 12:54 UTC, sreerenj
committed Details | Review

Description sreerenj 2012-11-02 15:52:53 UTC
Created attachment 227908 [details] [review]
textoverlay:forward allocation queries instead of discarding

The textoverlay element should forward the allocation queries instead of discarding them.
Comment 1 Tim-Philipp Müller 2012-11-05 11:45:49 UTC
Is there a reason to also forward the allocation queries from the text pad?
Comment 2 Tim-Philipp Müller 2012-11-05 11:47:40 UTC
Could you also mention in the commit message what this actually fixes (see bit about commit messages in http://gstreamer.freedesktop.org/wiki/GitDeveloperGuidelines ). Thanks!
Comment 3 sreerenj 2012-11-05 12:54:24 UTC
Created attachment 228105 [details] [review]
textoverlay:forward allocation queries instead of discarding.
Comment 4 Tim-Philipp Müller 2012-11-05 13:41:26 UTC
Pushed, thanks!

 commit 6cbcca0bc5a32a47cfb85b8a3dcf17223dccbba2
 Author: Sreerenj Balachandran <sreerenj.balachandran@intel.com>
 Date:   Mon Nov 5 14:35:56 2012 +0200

    textoverlay: forward allocation queries on video sink pad instead of discarding them
    
    This allows the upstream elements to use the allocation parameters
    or pools from the downstream elements like videosink.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=687459
Comment 5 Tim-Philipp Müller 2012-11-15 17:47:51 UTC
*** Bug 688415 has been marked as a duplicate of this bug. ***