textoverlay: forward allocation queries on video sink pad instead of discarding them

This allows the upstream elements to use the allocation parameters
or pools from the downstream elements like videosink.

https://bugzilla.gnome.org/show_bug.cgi?id=687459